============================================================================

OpenSLP Change Log
------------------

Please make entries to this log (in addition to the CVS log) that describe 
major changes to the OpenSLP code base.  An entries should be separated by
blank lines and include the date, developer's email, and change description.

=============================================================================

06/12/00 mpeterson@calderasystems.com
Fixed 107022 - Seg Fault when net.slp.interfaces specified in slp.conf

05/30/00 mpeterson@calderasystems.com
Fixed make files so that a make clean is done before a make install

*** TAG OpenSLP 0.6.6 ***

05/25/00 mpeterson@calderasystems.com
Added code to enable slpd to reply to service:service-agent SrvRqsts

05/24/00 mpeterson@calderasystem.com
Added an SLP test suite that was written by David McCormack.

05/24/00 mpeterson@calderasystems.com
Fixed 106298 - SLPFindAttrs does not find all attributes

05/18/00 mpeterson@calderasystems.com
Added the traceReg feature

05/18/00 mpeterson@calderasystems.com
Fixed #106044 - Quoted strings in slp.reg cause seg fault in slpd

05/17/00 mpeterson@calderasystems.com
Fixed #105904 - SLPOpen does not return SLP_NOT_IMPLEMENTED

05/15/00 mpeterson@calderasystems.com
Fixed a major bug that caused the library to freeze when slp.conf was changed

05/15/00 mpeterson@calderasystems.com
Brushed up traceMsg a little more.  Needs a little more work to be really
useful.  The framework is there though.	 
 
05/12/00 mpeterson@calderasystems.com
Add framework to support traceMsg functionality.  Still needs a little 
brushing up, but the main part is done.

05/03/00 mpeterson@calderasystems.com
This is another sample entry to show that entries should be separated by
blank lines.

05/03/00 mpeterson@calderasystems.com
This is a sample entry.  Please make your entries look like this